# aivo-virtual-brain

./: .cosign.yaml  .eslintrc.no-live-class.json  .eslintrc.test.json  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  .syft.yaml  GITOPS-VALIDATION.md  LICENSE  Makefile  README.md  S1-15-IMPLEMENTATION-REPORT.md  S3-10-IMPLEMENTATION-REPORT.md  S3-12-SLP-UI-IMPLEMENTATION-REPORT.md  S3-18-IMPLEMENTATION-SUMMARY.md  S4-09-IMPLEMENTATION-SUMMARY.md  S4-10-IMPLEMENTATION-SUMMARY.md  S4-12-IMPLEMENTATION-SUMMARY.md  S4-13-IMPLEMENTATION-SUMMARY.md  S4-14-IMPLEMENTATION-SUMMARY.md  S4-15-IMPLEMENTATION-SUMMARY.md  S4-16-IMPLEMENTATION-STATUS.md  S4-16-SEARCH-RELEVANCE-IMPLEMENTATION-REPORT.md  S5-03-CHAT-SERVICE-IMPLEMENTATION-REPORT.md  S5-04-MESSAGES-UI-IMPLEMENTATION-REPORT.md  S5-04-MESSAGES-UI-STATUS.md  S5-08-ADAPTER-RESET-IMPLEMENTATION-REPORT.md  S5-10-IMPLEMENTATION-REPORT.md  S6-05-IMPLEMENTATION-REPORT.md  S6-06-TEACHER-AUTHORING-IMPLEMENTATION-REPORT.md  commit-deployment.bat  demo_config_service.py  demo_s4_15_observability.py  deploy-commit.ps1  docker-compose.test.yml  docker-compose.yml  eslint.config.library-enforcer.js  eslint.config.no-live-class.js  eslint.config.test.js  (+14 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: a11y-i18n.yml  ci-node.yml  ci-python.yml  contracts.yml  dependency-review.yml  gitleaks.yml  k6-load.yml  model-registry.yml  model-trainer.yml  no-live-class.yml  release.yml  sbom-sign.yml  security-tests.yml  stage0-ready.yml  stage2-verification.yml  stage6-services-ci.yml  verification-svc.yml
.tools/node-v20.19.4-win-x64/: CHANGELOG.md
apps/gateway/: .busted  README.md  S1-09-IMPLEMENTATION-SUMMARY.md  Test-S1-09-Plugins.ps1  kong.yml  smoke-tests.http  smoke-tests.k6.js  test-gateway.ps1  test-kong-plugins-s1-09.lua  test-kong-plugins.ps1  test-s1-16-gateway.ps1  test_s1_09_plugins.lua  validate-s1-16.ps1
apps/web/: .gitignore  .prettierrc.json  README.md  S3-08-IMPLEMENTATION-REPORT.md  S3-19-PWA-IMPLEMENTATION-REPORT.md  eslint.config.js  index.html  package.json  playwright-a11y.config.ts  playwright-perf.config.ts  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
docs/: S1-16_Gateway_Implementation_Report.md  slo.md  stage2-verification.md
docs/adr/: adr-0001-dependency-policy.md
docs/auth/: enterprise-sso.md
docs/checklists/: stage-1.md  stage-2.md
docs/compliance/: ccpa.md  coppa.md  ferpa.md  gdpr.md  legal-hold-ediscovery.md
docs/legal/: dpa-template.md
docs/oncall/: schedule.md
docs/runbooks/: backup-restore.md  chaos.md  deploy.md  dr-scenarios.md  go-live.md  release-strategy.md  rollback.md
docs/safety/: policy-matrix.md
docs/security/: edge-hardening.md  edge-policies.md  namespace-isolation.md  threat-model.md
docs/testing/: rollout-test-scenarios.md
infra/: README.md  validate-gitops.ps1
infra/apollo/: router-minimal.yaml  router.yaml  router.yaml.backup-20250812-120931  supergraph.graphql
infra/argocd/: app-of-apps.yaml  argo-rollouts-app.yaml
infra/backup/: minio-sync.sh  os-snapshots.sh  pgbackrest.sh  verify-restore.sh
infra/cronjobs/: backup.yaml  retention.yaml
infra/edge/: cf-workers.js  waf-rules.tf
infra/grafana/: README.md  mock-health-server.py  requirements.txt  synthetic-load-generator.py  test-observability.ps1
infra/kong/: kong.yml  kong.yml.backup
infra/loki/: loki-config.yml
libs/: README.md
libs/model-providers/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  examples.py  pyproject.toml
libs/model-providers/.github/workflows/: ci.yml
libs/model-providers/aivo_model_providers/: __init__.py  base.py  bedrock_anthropic_provider.py  config.py  factory.py  openai_provider.py  vertex_gemini_provider.py
libs/model-providers/tests/: test_base.py  test_factory.py  test_openai_provider.py
libs/sdk-py/: pyproject.toml
libs/sdk-py/aivo_sdk/: __init__.py  codegen.py
mocks/: msw-handlers.js  msw-server.js  package.json
scripts/: check-deprecations.mjs  check-i18n-misses.ts  generate-sdks.ts  health-check.mjs  k6-edge-security-test.js  legal-hold-integration.py  platform-health.py  quick-verify.mjs  release-notes.ts  route-cta-guard.mjs  run-load-tests.sh  sec-all.mjs  stage2-performance.js  start-dev-simple.ps1  start-dev.ps1  test-edge-security.py  validate-s4-18.js  validate-s4-18.mjs  validate-s4-19.mjs  validate-s4-20.mjs  validate-s5-01.mjs  verify-s3-09.mjs  verify-s3-10.js  verify-s3-10.mjs  verify-s5-02.mjs  verify-stage1-simple.mjs  verify-stage1.mjs  verify-stage1.ts  verify-stage2.ts
services/: README.md
services/chat-svc/: README.md  alembic.ini  pyproject.toml
services/chat-svc/app/: config.py  database.py  events.py  main.py  middleware.py  models.py  routes.py  schemas.py
services/chat-svc/migrations/: env.py  script.py.mako
services/chat-svc/migrations/versions/: 001_initial_schema.py
services/chat-svc/tests/: conftest.py  test_api.py
services/learner-svc/: S1-08-IMPLEMENTATION-SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_imports.py  test_s1_08.py
services/learner-svc/app/: alias_utils.py  database.py  events.py  main.py  models.py  private_brain_service.py  schemas.py  service.py  utils.py
services/learner-svc/app/routers/: health.py  learners.py  persona.py
services/learner-svc/tests/: test_persona_rules.py
services/private-fm-orchestrator/: Dockerfile  QUICKSTART.md  README.md  alembic.ini  pyproject.toml
services/private-fm-orchestrator/app/: cron.py  isolator.py  main.py  models.py  routes.py
services/private-fm-orchestrator/app/routes/: reset.py
services/private-fm-orchestrator/migrations/: add_adapter_reset_table.py  env.py
services/private-fm-orchestrator/migrations/versions/: 001_initial_tables.py
services/private-fm-orchestrator/tests/: conftest.py  test_api.py  test_isolation_merge.py
services/user-svc/: main.py  pyproject.toml  simple_main.py
services/user-svc/app/: config.py  main.py
tests/: tsconfig.json
(+1169 files in other folders)
