[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aivo-sdk"
version = "1.0.0"
description = "Python SDK for Aivo Virtual Brains platform"
authors = ["AIVO Team <dev@aivo.ai>"]
readme = "README.md"
packages = [{include = "aivo_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"
pydantic = "^2.4.0"
gql = "^3.4.1"
requests-toolbelt = "^1.0.0"
strawberry-graphql = "^0.209.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
openapi-generator-cli = "^1.0.18"

[tool.poetry.scripts]
generate-clients = "aivo_sdk.codegen:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
