[tool.poetry]
name = "aivo-user-svc"
version = "1.0.0"
description = "AIVO User Service - Identity, Roles, Permissions, and Scoped Tokens"
authors = ["AIVO Team <tech@aivo.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
asyncpg = "*"
alembic = "*"
pydantic = "*"
pydantic-settings = "*"
pyjwt = "*"
cryptography = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"